--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	],
 	"require": {
 		"php": ">=7.1",
-		"illuminate/container": "~5.7"
+		"illuminate/container": "~5.7",
+		"illuminate/support": "~5.7"
 	},
 	"autoload": {
 		"psr-4": {
